force-app/main/default/objects/product_owner__c/product_owner__c.object-meta.xml
<CustomObject>
    <label>product_owner</label>
    <nameField>
        <label>product_owner</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>product_owners</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>