force-app/main/default/objects/product_owner__c/fields/Available_Description__c.field-meta.xml
<CustomField>
    <fullName>Available_Description__c</fullName>
    <label>Available_Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>