force-app/main/default/objects/product_owner__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>product_owners</relationshipLabel>
    <relationshipName>product_owners</relationshipName>
    <type>Lookup</type>
</CustomField>