force-app/main/default/objects/product_owner__c/fields/Cover_Letter__c.field-meta.xml
<CustomField>
    <fullName>Cover_Letter__c</fullName>
    <label>Cover_Letter</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>