force-app/main/default/objects/product_owner__c/fields/Employable__c.field-meta.xml
<CustomField>
    <fullName>Employable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Employable</label>
    <type>Checkbox</type>
</CustomField>