force-app/main/default/objects/product_owner__c/fields/isFreelance__c.field-meta.xml
<CustomField>
    <fullName>isFreelance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isFreelance</label>
    <type>Checkbox</type>
</CustomField>