force-app/main/default/objects/product_owner__c/fields/LegacyOpaID__c.field-meta.xml
<CustomField>
    <fullName>LegacyOpaID__c</fullName>
    <label>LegacyOpaID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>