force-app/main/default/objects/product_owner__c/fields/LinkedIn_Profile__c.field-meta.xml
<CustomField>
    <fullName>LinkedIn_Profile__c</fullName>
    <label>LinkedIn_Profile</label>
    <type>Url</type>
</CustomField>