force-app/main/default/objects/product_owner__c/fields/MailingCity__c.field-meta.xml
<CustomField>
    <fullName>MailingCity__c</fullName>
    <label>MailingCity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>