force-app/main/default/objects/product_owner__c/fields/MailingCountry__c.field-meta.xml
<CustomField>
    <fullName>MailingCountry__c</fullName>
    <label>MailingCountry</label>
    <length>255</length>
    <type>Text</type>
</CustomField>