force-app/main/default/objects/product_owner__c/fields/MailingPostcode__c.field-meta.xml
<CustomField>
    <fullName>MailingPostcode__c</fullName>
    <label>MailingPostcode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>