force-app/main/default/objects/product_owner__c/fields/MobilePhone__c.field-meta.xml
<CustomField>
    <fullName>MobilePhone__c</fullName>
    <label>MobilePhone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>