force-app/main/default/objects/product_owner__c/fields/OPA_Photo__c.field-meta.xml
<CustomField>
    <fullName>OPA_Photo__c</fullName>
    <label>OPA_Photo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>