force-app/main/default/objects/product_owner__c/fields/Other_Email__c.field-meta.xml
<CustomField>
    <fullName>Other_Email__c</fullName>
    <label>Other_Email</label>
    <type>Email</type>
</CustomField>