force-app/main/default/objects/product_owner__c/fields/Profile_Updated__c.field-meta.xml
<CustomField>
    <fullName>Profile_Updated__c</fullName>
    <label>Profile_Updated</label>
    <type>DateTime</type>
</CustomField>