force-app/main/default/objects/product_owner__c/fields/ProfileModified__c.field-meta.xml
<CustomField>
    <fullName>ProfileModified__c</fullName>
    <label>ProfileModified</label>
    <type>DateTime</type>
</CustomField>