force-app/main/default/objects/product_owner__c/fields/qskill_id__c.field-meta.xml
<CustomField>
    <fullName>qskill_id__c</fullName>
    <label>qskill_id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>