force-app/main/default/objects/product_owner__c/fields/Raw_Skills__c.field-meta.xml
<CustomField>
    <fullName>Raw_Skills__c</fullName>
    <label>Raw_Skills</label>
    <length>255</length>
    <type>Text</type>
</CustomField>