force-app/main/default/objects/product_owner__c/fields/Registration_Date__c.field-meta.xml
<CustomField>
    <fullName>Registration_Date__c</fullName>
    <label>Registration_Date</label>
    <type>Date</type>
</CustomField>