force-app/main/default/objects/product_owner__c/fields/Sultation__c.field-meta.xml
<CustomField>
    <fullName>Sultation__c</fullName>
    <label>Sultation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>